--- a/.gitignore
+++ b/.gitignore
@@ -133,4 +133,5 @@ dmypy.json
 /weather_project/db.sqlite3
 /weather_project/weather_project/__pycache__
 /weather_project/meteo_app/__pycache__
-/weather_project/meteo_app/files
+*.DS_Store
+*.idea
